tello/workspace/log/build_2025-11-13_10-43-52/controller/stderr.log
  File "/home/alix.degironde/Public/tello-ros2/workspace/install/controller/lib/python3.12/site-packages/controller/manual_control.py", line 95
    self.get_logger().info(
                          ^
SyntaxError: '(' was never closed

